syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.rachvik.tinyurl";

message ShortURLRequest {
  string user_id = 1;
  string original_url = 2;
  bool create_if_not_exists = 3;
}

message OriginalURLRequest {
  string user_id = 1;
  string short_url = 2;
}

message TinyURLResponse {
  string user_id = 1;
  string original_url = 2;
  string short_url = 3;
}