syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.rachvik.tinyurl";
import "tinyurl/models/tinyurl.proto";

service TinyUrlService {
  rpc getShortURL(tinyurl.ShortURLRequest) returns (tinyurl.TinyURLResponse) {};
  rpc getOriginalURL(tinyurl.OriginalURLRequest) returns (tinyurl.TinyURLResponse) {};
}
